turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:9: error: value update is not a member of java.awt.Color
	getCouleur() = Color.RED
        ^Source:11: error: value update is not a member of java.awt.Color
	getCouleur() = Color.YELLOW
        ^Source:13: error: value update is not a member of java.awt.Color
	getCouleur() =  Color .MAGENTA
        ^