turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
def quartdeCercle() { 
for (k<-1 to 90) {
	avance(100)
	recule(100)
	droite(1)}}
	quartdeCercle()
	getCouleur() = Color.RED
	quartdeCercle()
	getCouleur() = Color.YELLOW
	quartdeCercle()
	getCouleur() =  Color .MAGENTA
	quartdeCercle()	
}
